--- a/components/authentication-endpoint/pom.xml
+++ b/components/authentication-endpoint/pom.xml
@@ -21,7 +21,7 @@
 		<groupId>com.wso2telco.ids</groupId>
 		<artifactId>component-ids</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -36,28 +36,23 @@
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>${sevlet.api.version}</version>
+			<artifactId>javax.servlet-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
-			<version>${version.commons.logging}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>${slf4j.version}</version>
 		</dependency>
  		<dependency>
  			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId> 
- 			<version>${jstl.version}</version> 
  		</dependency>
 		<dependency>
 			<groupId>commons-codec.wso2</groupId>
 			<artifactId>commons-codec</artifactId>
-			<version>${commons-codec.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
