--- a/components/session-updater/pom.xml
+++ b/components/session-updater/pom.xml
@@ -25,11 +25,6 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.googlecode.json-simple</groupId>
-			<artifactId>json-simple</artifactId>
-			<version>${json.simple.version}</version>
-		</dependency>
-		<dependency>
 			<groupId>org.json.wso2</groupId>
 			<artifactId>json</artifactId>
 			<version>${org.json.wso2.version}</version>
@@ -50,9 +45,9 @@
 			<version>${carbon.identity.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
+			<groupId>org.wso2.orbit.org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>${httpclient.version}</version>
+			<version>${httpcomponents-httpclient.wso2.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-codec.wso2</groupId>
