session updater feature folder name changed

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -17,7 +17,7 @@
 	    <module>com.wso2telco.ids.userclaimretriever.feature</module>
         <module>com.wso2telco.ids.authenticateselector.feature</module>
 	    <module>com.wso2telco.ids.authenticationendpoint.feature</module>
-        <module>com.wso2telco.ids.sessionupdater.feature</module>
+        <module>com.wso2telco.ids.sessionupdater.ui.feature</module>
     </modules>
     <properties>
 	<org.wso2telco.ids.version>1.0.0-SNAPSHOT</org.wso2telco.ids.version>
