--- a/features/com.wso2telco.ids.sessionupdater.ui.feature/pom.xml
+++ b/features/com.wso2telco.ids.sessionupdater.ui.feature/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>com.wso2telco.ids.sessionupdater.feature</artifactId>
+    <artifactId>com.wso2telco.ids.sessionupdater.ui.feature</artifactId>
     <packaging>pom</packaging>
     <name>Session Updater</name>
     <url>http://wso2telco.com</url>
@@ -131,7 +131,7 @@
                             <goal>p2-feature-gen</goal>
                         </goals>
                         <configuration>
-                            <id>com.wso2telco.ids.sessionupdater.feature</id>
+                            <id>com.wso2telco.ids.sessionupdater.ui.feature</id>
                             <propertiesFile>../feature.properties</propertiesFile>
                             <adviceFile>
                                 <properties>
