--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -25,6 +25,14 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.apache.amber.wso2</groupId>
+			<artifactId>amber</artifactId>
+		</dependency>	
+		<dependency>
+			<groupId>org.wso2.carbon.identity</groupId>
+			<artifactId>org.wso2.carbon.identity.oauth</artifactId>
+		</dependency>	
+		<dependency>
 			<groupId>org.wso2telco.core</groupId>
 			<artifactId>dbutils</artifactId>
 		</dependency>
