--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -32,6 +32,10 @@
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.oauth</artifactId>
 		</dependency>	
+			<dependency>
+				<groupId>org.wso2.carbon.identity</groupId>
+				<artifactId>org.wso2.carbon.identity.application.common</artifactId>
+			</dependency>
 		<dependency>
 			<groupId>org.wso2telco.core</groupId>
 			<artifactId>dbutils</artifactId>
