--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,8 @@
 		<module>components/user-claim-retriever</module>
 		<module>components/authenticate-selector</module>
 		<module>components/gsma-authenticators</module>
-		<!--module>components/openid-token-builder</module>
-		<module>components/session-updater</module-->
+		<module>components/openid-token-builder</module>
+		<module>components/session-updater</module>
                 <module>components/authentication-endpoint</module>
 		<module>features</module>
 		<!--module>webapps</module -->
@@ -2126,7 +2126,7 @@
 		<org.wso2.carbon.version>4.4.3</org.wso2.carbon.version>
 		<org.wso2.carbon.identity.version>5.0.7</org.wso2.carbon.identity.version>
 		<!--org.wso2.carbon.identity.provider.version>5.0.7</org.wso2.carbon.identity.provider.version-->
-		<org.wso2.carbon.identity.oauth.custom.version>5.0.7</org.wso2.carbon.identity.oauth.custom.version>
+		<org.wso2.carbon.identity.oauth.custom.version>5.0.5</org.wso2.carbon.identity.oauth.custom.version>
 		<!--maven.checkstyle.plugin.version>2.17</maven.checkstyle.plugin.version-->
 		<!--commons.logging>1.2</commons.logging-->
 		<maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
