--- a/components/session-updater/pom.xml
+++ b/components/session-updater/pom.xml
@@ -25,10 +25,11 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.json.wso2</groupId>
-			<artifactId>json</artifactId>
-			<version>${org.json.wso2.version}</version>
-		</dependency>
+			   <groupId>org.json.wso2</groupId>
+			   <artifactId>json</artifactId>
+			   <version>${json.wso2.version}</version>
+	   </dependency>
+		
 		<dependency>
 			<groupId>org.wso2.carbon</groupId>
 			<artifactId>org.wso2.carbon.authenticator.stub</artifactId>
