--- a/components/user-registration/pom.xml
+++ b/components/user-registration/pom.xml
@@ -164,26 +164,26 @@
 
 		<!--dependency> <groupId>org.apache.axis2.databinding</groupId> <artifactId>Databinding</artifactId> 
 			<version>1.0.0</version> </dependency -->
-		<dependency>
+		<!--dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-atom</artifactId>
-		</dependency>
+		</dependency-->
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-json</artifactId>
 		</dependency>
-		<dependency>
+		<!--dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-core</artifactId>
-		</dependency>
-		<dependency>
+		</dependency-->
+		<!--dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-server</artifactId>
-		</dependency>
-		<dependency>
+		</dependency-->
+		<!--dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-client</artifactId>
-		</dependency>
+		</dependency-->
 		<dependency>
 			<groupId>com.sun.jersey.contribs</groupId>
 			<artifactId>jersey-atom-abdera</artifactId>
@@ -199,11 +199,11 @@
 			<artifactId>jersey-apache-client</artifactId>
 		</dependency>
 		
-		<dependency>
+		<!--dependency>
 			<groupId>com.sun.jersey.contribs</groupId>
 			<artifactId>jersey-spring</artifactId>
 	
-		</dependency>
+		</dependency-->
 		<dependency>
 			<groupId>com.sun.jersey.contribs</groupId>
 			<artifactId>jersey-multipart</artifactId>
