--- a/pom.xml
+++ b/pom.xml
@@ -1910,11 +1910,11 @@
 				<version>${com.ibm.icu.version}</version>
 			</dependency>
 
-			<dependency>
+			<!--dependency>
 				<groupId>com.sun.jersey</groupId>
 				<artifactId>jersey-atom</artifactId>
 				<version>${com.sun.jersey.version}</version>
-		</dependency>
+		</dependency-->
 
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
@@ -1922,23 +1922,23 @@
 			<version>${com.sun.jersey.version}</version>
 		</dependency>
 
-		<dependency>
+		<!--dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-core</artifactId>
 			<version>${com.sun.jersey.version}</version>
-		</dependency>
+		</dependency-->
 
-		<dependency>
+		<!--dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-server</artifactId>
 			<version>${com.sun.jersey.version}</version>
-		</dependency>
+		</dependency-->
 
-		<dependency>
+		<!--dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-client</artifactId>
 			<version>${com.sun.jersey.version}</version>
-		</dependency>
+		</dependency-->
 
 		<dependency>
 			<groupId>com.sun.jersey.contribs</groupId>
@@ -1946,11 +1946,11 @@
 			<version>${com.sun.jersey.version}</version>
 		</dependency>
 
-		<dependency>
+		<!--dependency>
 			<groupId>com.sun.jersey.contribs</groupId>
 			<artifactId>jersey-apache-client</artifactId>
 			<version>${com.sun.jersey.version}</version>
-		</dependency>
+		</dependency-->
 
 		<dependency>
 			<groupId>com.sun.jersey.contribs</groupId>
