email url shorten

--- a/pom.xml
+++ b/pom.xml
@@ -2267,6 +2267,38 @@
 	</build>
 	<profiles>
 		<profile>
+			<id>notify</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-changes-plugin</artifactId>
+						<version>2.11</version>
+						<configuration>
+							<smtpHost>${smtphost}</smtpHost>
+							<smtpPort implementation="java.lang.Integer">${smtpport}</smtpPort>
+							<toAddresses>
+								<toAddress implementation="java.lang.String">${toemail}</toAddress>								
+							</toAddresses>
+							<username>${username}</username>
+							<password>${password}</password>
+							<template>announcement.vm</template>
+							<templateDirectory>emailtemplates</templateDirectory>
+						</configuration>
+						<executions>
+							<execution>
+								<id>check-changes</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>changes-check</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
 			<id>release</id>
 			<build>
 				<plugins>
