--- a/components/operator-proxy-service/pom.xml
+++ b/components/operator-proxy-service/pom.xml
@@ -29,25 +29,26 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			</dependency>
+		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
-			</dependency>
+		</dependency>
 		<dependency>
 			<groupId>com.google.gdata.wso2</groupId>
 			<artifactId>gdata-core</artifactId>
-			</dependency>
+		</dependency>
 		<dependency>
 			<groupId>commons-fileupload.wso2</groupId>
 			<artifactId>commons-fileupload</artifactId>
-			</dependency>
+		</dependency>
 		<dependency>
-			<groupId>javax.ws.rs</groupId>
-			<artifactId>javax.ws.rs</artifactId>
-			<version>${javax.ws.rs.version}</version>
+			<groupId>org.apache.cxf.wso2</groupId>
+			<artifactId>cxf-bundle</artifactId>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
+
 	<build>
 		<finalName>OperatorProxyService</finalName>
 		<plugins>
