--- a/components/operator-proxy-service/pom.xml
+++ b/components/operator-proxy-service/pom.xml
@@ -50,7 +50,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>OperatorProxyService</finalName>
+		<finalName>operatorproxyservice</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -69,7 +69,7 @@
 							<directory>src/main/webapp</directory>
 						</resource>
 					</webResources>
-					<warName>OperatorProxyService</warName>
+					<warName>operatorproxyservice</warName>
 				</configuration>
 			</plugin>
 		</plugins>
