--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -29,7 +29,7 @@
 			<artifactId>amber</artifactId>
 		</dependency>	
 		<dependency>
-			<groupId>org.wso2.carbon.identity</groupId>
+			<groupId>org.wso2.carbon</groupId>
 			<artifactId>org.wso2.carbon.identity.oauth</artifactId>
 		</dependency>	
 			<dependency>
