--- a/pom.xml
+++ b/pom.xml
@@ -1247,6 +1247,11 @@
 				<version>${carbon.identity.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.wso2.carbon</groupId>
+				<artifactId>org.wso2.carbon.identity.oauth</artifactId>
+				<version>${carbon.identity.custom.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.wso2.carbon.identity</groupId>
 				<artifactId>org.wso2.carbon.identity.oauth.ui</artifactId>
 				<version>${carbon.identity.version}</version>
@@ -1942,8 +1947,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<json.version>20140107</json.version>
-		<amber.version>0.22.1358727.wso2v2</amber.version>
-
+		<amber.version>0.22.1358727.wso2v4</amber.version>
+						
 		<json.path.version>0.9.1</json.path.version>
 		<!-- Carbon kernel version -->
 
@@ -1961,7 +1966,8 @@
 		<carbon.commons.imp.pkg.version>[4.4.0, 5.0.0)</carbon.commons.imp.pkg.version>
 
 		<!--Carbon identity version -->
-		<carbon.identity.version>5.0.5</carbon.identity.version>
+		<carbon.identity.version>5.0.7</carbon.identity.version>
+		<carbon.identity.custom.version>4.2.3</carbon.identity.custom.version>
 		<carbon.identity.package.export.version>${carbon.identity.version}</carbon.identity.package.export.version>
 		<carbon.identity.package.import.version.range>[5.0.0, 6.0.0)</carbon.identity.package.import.version.range>
 
@@ -2186,6 +2192,9 @@
 		<com.google.code.gson.version>2.5</com.google.code.gson.version>
 		<maven-war-plugin.version>2.1.1</maven-war-plugin.version>
 		<org.json.wso2.version>3.0.0.wso2v1</org.json.wso2.version>
+		
+		<org.apache.felix.scr.annotations.version>1.9.6</org.apache.felix.scr.annotations.version>		
+		
 	</properties>
 
 	<build>
