--- a/features/com.wso2telco.ids.operatorproxyservice.ui.feature/pom.xml
+++ b/features/com.wso2telco.ids.operatorproxyservice.ui.feature/pom.xml
@@ -16,7 +16,7 @@
 	<description>
     </description>
 
-	<dependencies>
+	<!--dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -42,7 +42,7 @@
 			<groupId>org.apache.cxf.wso2</groupId>
 			<artifactId>cxf-bundle</artifactId>
 		</dependency>
-	</dependencies>
+	</dependencies-->
 
 	<build>
 		<plugins>
@@ -134,7 +134,7 @@
 								</properties>
 							</adviceFile>
 							<bundles>
-								<bundleDef>
+								<!--bundleDef>
 									com.google.gdata.wso2:gdata-core:${gdata-core.wso2.version}
 								</bundleDef>
 								<bundleDef>
@@ -142,7 +142,7 @@
 								</bundleDef>
 								<bundleDef>
 									org.apache.cxf.wso2:cxf-bundle:${cxf-bundle.wso2.version}
-								</bundleDef>
+								</bundleDef-->
 							</bundles>
 						</configuration>
 					</execution>
