--- a/pom.xml
+++ b/pom.xml
@@ -2258,10 +2258,23 @@
 
 		<plugins>
 			<plugin>
+                            <groupId>org.apache.felix</groupId>
+                            <artifactId>maven-scr-plugin</artifactId>
+                            <version>1.7.2</version>
+                                    <executions>
+                                          <execution>
+                                            <id>generate-scr-scrdescriptor</id>
+                                            <goals>
+                                                <goal>scr</goal>
+                                            </goals>
+                                        </execution>
+                                </executions>
+                        </plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<configuration>
-					<preparationGoals>clean install</preparationGoals>
+					<preparationGoals>clean install javadoc:jar</preparationGoals>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 				</configuration>
 			</plugin>
@@ -2279,6 +2292,18 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+
+			 <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-javadoc-plugin</artifactId>
+                                <configuration>
+                                    <aggregate>true</aggregate>
+                                    <excludePackageNames>*.internal.*</excludePackageNames>
+                                    <show>public</show>
+                                    <nohelp>true</nohelp>
+                                </configuration>
+                         </plugin>
+
 		</plugins>
 	</build>
 	<profiles>
