--- a/pom.xml
+++ b/pom.xml
@@ -1881,12 +1881,12 @@
 			<dependency>
 				<groupId>com.wso2telco.ids</groupId>
 				<artifactId>authenticate-selector</artifactId>
-				<version>${authentic.selector.version}</version>
+				<version>${com.wso2telco.ids.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.wso2telco.ids</groupId>
 				<artifactId>url-shorten</artifactId>
-				<version>${com.wso2telco.ids.urlshorten.version}</version>
+				<version>${com.wso2telco.ids.version}</version>
 			</dependency>
 
 			<dependency>
