--- a/pom.xml
+++ b/pom.xml
@@ -1898,7 +1898,7 @@
 			</dependency>
 
 			<dependency>
-				<groupId>org.wso2telco.core</groupId>
+				<groupId>com.wso2telco.core</groupId>
 				<artifactId>dbutils</artifactId>
 				<version>${com.wso2telco.core.version}</version>
 			</dependency>
