--- a/pom.xml
+++ b/pom.xml
@@ -2192,7 +2192,7 @@
 		<ehcache.version>1.5.0.wso2v3</ehcache.version>
 		<json.simple.version>1.1</json.simple.version>
 		<project.scm.id>my-scm-server</project.scm.id>
-		<!--- wso2 telco -->
+		<!-- wso2 telco -->
 		<org.apache.sling.commons.json.version>2.0.6</org.apache.sling.commons.json.version>
 		<org.wso2.amber.version>0.22.1358727.wso2v4</org.wso2.amber.version>
 		<!--from intermediate pom -->
