--- a/features/com.wso2telco.ids.authenticateselector.feature/pom.xml
+++ b/features/com.wso2telco.ids.authenticateselector.feature/pom.xml
@@ -20,7 +20,7 @@
         <!--dependency>
             <groupId>com.wso2telco.ids</groupId>
             <artifactId>authenticate-selector</artifactId>
-            <version>${org.wso2telco.ids.version}</version>
+            <version>${com.wso2telco.ids.version}</version>
         </dependency-->
     </dependencies>
 
