--- a/features/com.wso2telco.ids.urlshorten.feature/pom.xml
+++ b/features/com.wso2telco.ids.urlshorten.feature/pom.xml
@@ -42,7 +42,7 @@
                                 </properties>
                             </adviceFile>
                             <bundles>
-                                <bundleDef>com.wso2telco.ids:url-shorten:${org.wso2telco.ids.version}</bundleDef>
+                                <bundleDef>com.wso2telco.ids:url-shorten:${com.wso2telco.ids.version}</bundleDef>
                             </bundles>
 				<importFeatures>
 					<importFeatureDef>org.wso2.orbit.org.apache.httpcomponents:httpclient</importFeatureDef>
