--- a/pom.xml
+++ b/pom.xml
@@ -2286,7 +2286,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<configuration>
-					<preparationGoals>clean install javadoc:jar</preparationGoals>
+					<preparationGoals>clean install </preparationGoals>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 				</configuration>
 			</plugin>
