--- a/features/com.wso2telco.ids.sessionupdater.ui.feature/pom.xml
+++ b/features/com.wso2telco.ids.sessionupdater.ui.feature/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.wso2telco.ids</groupId>
         <artifactId>component-ids-feature</artifactId>
-        <version>2.0.1</version>
+        <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
