--- a/components/sign/pom.xml
+++ b/components/sign/pom.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.wso2telco.ids</groupId>
-    <artifactId>component-ids</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <relativePath>../../pom.xml</relativePath>
-  </parent>
-  <groupId>com.wso2telco.ids</groupId>
+	<artifactId>component-ids-parent</artifactId>
+        <version>2.0.1-SNAPSHOT</version>
+        <relativePath>../../parent/pom.xml</relativePath>  
+</parent>
   <artifactId>sign</artifactId>
   <packaging>pom</packaging>
   <name>sign</name>
