chenge parent pom structure

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
 	</prerequisites>
 
 	<modules>
+		<module>parent</module>
 		<module>components/url-shorten</module>
 		<module>components/user-claim-retriever</module>
 		<module>components/authenticate-selector</module>
@@ -64,5 +65,48 @@
 		<connection>scm:git:https://github.com/WSO2Telco/component-ids.git</connection>
 		<tag>v2.0.1</tag>
 	</scm>
+
+
+
+    <build>
+     
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+          
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <preparationGoals>clean install</preparationGoals>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>docs</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>javadoc</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
