--- a/components/session-updater/pom.xml
+++ b/components/session-updater/pom.xml
@@ -26,48 +26,40 @@
 		<dependency>
 			   <groupId>org.json.wso2</groupId>
 			   <artifactId>json</artifactId>
-			   <version>${json.wso2.version}</version>
 	   </dependency>
 		
 		<dependency>
 			<groupId>org.wso2.carbon</groupId>
 			<artifactId>org.wso2.carbon.authenticator.stub</artifactId>
-			<version>${carbon.kernel.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.mgt.stub</artifactId>
-			<version>${carbon.identity.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.um.ws.api.stub</artifactId>
-			<version>${carbon.identity.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.wso2.orbit.org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>${httpcomponents-httpclient.wso2.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-codec.wso2</groupId>
 			<artifactId>commons-codec</artifactId>
-			<version>${commons-codec.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
-			<version>${sevlet.api.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>javax.ws.rs</groupId>
-			<artifactId>javax.ws.rs</artifactId>
-			<version>${javax.ws.rs.version}</version>
-		</dependency>
+                       <groupId>org.apache.cxf.wso2</groupId>
+                       <artifactId>cxf-bundle</artifactId>
+                       <scope>provided</scope>
+               </dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>${com.google.code.gson.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
