--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1853,38 +1853,38 @@
 				<artifactId>mnc-resolver</artifactId>
 				<version>${com.wso2telco.core.version}</version>
 			</dependency>
-			<dependency>
+			<!--dependency>
 				<groupId>com.wso2telco.ids</groupId>
 				<artifactId>authenticate-selector</artifactId>
 				<version>${com.wso2telco.ids.version}</version>
-			</dependency>
-			<dependency>
+			</dependency-->
+			<!--dependency>
 				<groupId>com.wso2telco.ids</groupId>
 				<artifactId>url-shorten</artifactId>
 				<version>${com.wso2telco.ids.version}</version>
-			</dependency>
+			</dependency-->
 
 			<dependency>
 				<groupId>com.wso2telco.core</groupId>
 				<artifactId>dbutils</artifactId>
 				<version>${com.wso2telco.core.version}</version>
 			</dependency>
-			<dependency>
+			<!--dependency>
 				<groupId>com.wso2telco.ids</groupId>
 				<artifactId>gsma-authenticator</artifactId>
 				<version>${com.wso2telco.ids.version}</version>
-			</dependency>
-			<dependency>
+			</dependency-->
+			<!--dependency>
                                 <groupId>com.wso2telco.ids</groupId>
                                 <artifactId>user-registration</artifactId>
                                 <version>${com.wso2telco.ids.version}</version>
-                        </dependency>
+                        </dependency-->
 
-			<dependency>
+			<!--dependency>
                                 <groupId>com.wso2telco.ids</groupId>
                                 <artifactId>user-claim-retriever</artifactId>
                                 <version>${com.wso2telco.ids.version}</version>
-                        </dependency>
+                        </dependency-->
 
 			<!-- User registration dependacies -->
 
@@ -2162,7 +2162,7 @@
 		<org.apache.sling.commons.json.version>2.0.6</org.apache.sling.commons.json.version>
 		<org.wso2.amber.version>0.22.1358727.wso2v4</org.wso2.amber.version>
 		<!--from intermediate pom -->
-		<com.wso2telco.ids.version>1.0.0-SNAPSHOT</com.wso2telco.ids.version>
+		<com.wso2telco.ids.version>2.0.1-SNAPSHOT</com.wso2telco.ids.version>
 		<org.wso2.carbon.version>4.4.3</org.wso2.carbon.version>
 		<org.wso2.carbon.identity.version>5.0.7</org.wso2.carbon.identity.version>
 		<!--org.wso2.carbon.identity.provider.version>5.0.7</org.wso2.carbon.identity.provider.version-->
