--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,9 @@
 
 	<modules>
 		<module>parent</module>
-		<module>components/url-shorten</module>
-	<module>components/user-claim-retriever</module>
-			<module>components/authenticate-selector</module>
+		<!--<module>components/url-shorten</module>
+		<module>components/user-claim-retriever</module>
+		<module>components/authenticate-selector</module>
 		<module>components/gsma-authenticators</module>
 		<module>components/openid-token-builder</module>
 		<module>components/operator-proxy-service</module>
@@ -52,7 +52,7 @@
 		<module>components/portal</module>
 		<module>components/dashboard</module>
 		<module>components/authentication-endpoint</module>
-		
+		-->
 		<module>features</module> 
 		<!--module>webapps</module -->
 	</modules>
