--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -34,40 +34,38 @@
 
 	<repositories>
 
-		<repository>
-			<id>wso2-nexus</id>
-			<name>WSO2 internal Repository</name>
-			<url>http://maven.wso2.org/nexus/content/groups/wso2-public/</url>
-			<releases>
-				<enabled>true</enabled>
-				<updatePolicy>daily</updatePolicy>
-				<checksumPolicy>ignore</checksumPolicy>
-			</releases>
-		</repository>
-
-		<repository>
-			<id>wso2.releases</id>
-			<name>WSO2 internal Repository</name>
-			<url>http://maven.wso2.org/nexus/content/repositories/releases/</url>
-			<releases>
-				<enabled>true</enabled>
-				<updatePolicy>daily</updatePolicy>
-				<checksumPolicy>ignore</checksumPolicy>
-			</releases>
-		</repository>
-
-		<repository>
-			<id>wso2.snapshots</id>
-			<name>Apache Snapshot Repository</name>
-			<url>http://maven.wso2.org/nexus/content/repositories/snapshots/</url>
-			<snapshots>
-				<enabled>true</enabled>
-				<updatePolicy>daily</updatePolicy>
-			</snapshots>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</repository>
+  <repository>
+                        <id>wso2telco-nexus</id>
+                        <name>WSO2Telco internal Repository</name>
+                        <url>http://maven.wso2telco.com/nexus/content/groups/public/</url>
+                        <releases>
+                                <enabled>true</enabled>
+                                <updatePolicy>daily</updatePolicy>
+                                <checksumPolicy>ignore</checksumPolicy>
+                        </releases>
+                </repository>
+                <repository>
+                        <id>wso2telco.releases</id>
+                        <name>WSO2 internal Repository</name>
+                        <url>http://maven.wso2telco.com/nexus/content/repositories/releases/</url>
+                        <releases>
+                                <enabled>true</enabled>
+                                <updatePolicy>daily</updatePolicy>
+                                <checksumPolicy>ignore</checksumPolicy>
+                        </releases>
+                </repository>
+                <repository>
+                        <id>wso2Telco.snapshots</id>
+                        <name>WSO2Telco Snapshot Repository</name>
+                        <url>http://maven.wso2telco.com/nexus/content/repositories/snapshots/</url>
+                        <snapshots>
+                                <enabled>true</enabled>
+                                <updatePolicy>daily</updatePolicy>
+                        </snapshots>
+                        <releases>
+                                <enabled>false</enabled>
+                        </releases>
+                </repository>
 
 	</repositories>
 
