--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -40,6 +40,14 @@
                 </repository>
         </distributionManagement>
 
+	<scm>
+                <url>https://github.com/WSO2Telco/component-ids.git</url>
+                <developerConnection>scm:git:https://github.com/WSO2Telco/component-ids.git</developerConnection>
+                <connection>scm:git:https://github.com/WSO2Telco/component-ids.git</connection>
+                <tag>v2.0.1</tag>
+        </scm>
+
+
 	<repositories>
 
   <repository>
