--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,22 @@
 	<prerequisites>
 		<maven>3.0.0</maven>
 	</prerequisites>
+	
+	<distributionManagement>
+                <snapshotRepository>
+                        <id>wso2Telco.snapshots</id>
+                        <name>Snapshot repo</name>
+                        <url>http://maven.wso2telco.com/nexus/content/repositories/snapshots</url>
+                </snapshotRepository>
+                <!-- Publish the versioned releases here -->
+                <repository>
+                        <id>wso2telco.releases</id>
+                        <name>release repo</name>
+                        <url>http://maven.wso2telco.com/nexus/content/repositories/releases/</url>
+                </repository>
+        </distributionManagement>
 
+	
 	<modules>
 		<module>parent</module>
 		<module>components/url-shorten</module>
