add fix to jdoc with 1.8

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -2287,6 +2287,9 @@
 								</goals>
 							</execution>
 						</executions>
+						<configuration>
+                        			<additionalparam>-Xdoclint:none</additionalparam>
+			                        </configuration>
 					</plugin>
 		</plugins>
 	</build>
